--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
 
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" + content="chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevLinks</title>
     <link rel="stylesheet" href="style.css" />
@@ -21,7 +21,7 @@
           src="./assets/avatar.png"
           alt="Foto de edjan sério, usando óculos e sem camisa, sem barba e fundo amarelo claro."
         />
-        <p>@Edjan-Santos</p>
+        <p>@Edjan___</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -49,20 +49,20 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/edjan11" target="_blank">
-          <ion-icon name="logo-github"></ion-icon>
+        <a href="https://github.com/edjan11" target="_blank"
+          ><ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://instagram.com/edjan___" target="_blank">
-          <ion-icon name="logo-instagram"></ion-icon>
+        <a href="https://instagram.com/edjan___" target="_blank"
+          ><ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://youtube.com/maykbrito" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
+        <a href="https://youtube.com/maykbrito" target="_blank"
+          ><ion-icon name="logo-youtube"></ion-icon>
         </a>
 
-        <a href="https://linkedin.com/in/Edjan-Santos" target="_blank">
-          <ion-icon name="logo-linkedin"></ion-icon>
+        <a href="https://linkedin.com/in/Edjan-Santos" target="_blank"
+          ><ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
 
