--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </li>
 
         <li>
-          <a href="https://github.com/maykbrito">Ver meu portfólio</a>
+          <a href="https://github.com/edjan11">Ver meu portfólio</a>
         </li>
 
         <li>
@@ -57,7 +57,7 @@
           ><ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://youtube.com/maykbrito" target="_blank"
+        <a href="https://youtube.com/" target="_blank"
           ><ion-icon name="logo-youtube"></ion-icon>
         </a>
 
